--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10487,33 +10487,23 @@ body {
 }
 
 .wrapper {
-  display: inline-block;
-  margin-top: 40px;
+  margin: 40px auto 10px auto;
   padding: 0 15px 15px 15px;
-  width: 100%;
+  width: 95%;
 }
 
 .app-min-height {
   min-height: 900px;
 }
 
-nav {
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-nav .navbar-brand {
-  padding-left: 40px;
-}
-
 nav .nav-item {
-  margin-left: 20px;
+  margin-right: 5px;
 }
 
 .app-footer {
   color: #fff;
   padding: 10px 0;
-  margin-top: 10%;
+  margin-top: 4%;
   font-size: 11px;
   background: #888;
   font-family: "Segoe UI", sans-serif;
